--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,23 @@ body {
   background: #F2F2F2;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.reset-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .page-container {
   width: 1200px;
   margin: 0 auto;
@@ -52,29 +69,26 @@ body {
 }
 
 .page-header {
+  display: flex;
+  width: 1060px;
+  margin: 0 auto;
   color: #ffffff;
   background-color: #ffffff;
 }
 
-.page-hedear-container {
+.navigation {
   display: flex;
-  width: 1060px;
-  margin: 0 auto;
 }
 
 .navigation-list {
+  display: flex;
+  flex-wrap: wrap;
   width: 620px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.navigation-user {
-  width: 300px;
-  margin-left: auto;
 }
 
 .navigation-link {
+  display: block;
+  padding: 20px 16px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -85,12 +99,42 @@ body {
   text-transform: capitalize;
 }
 
+.user-panel {
+  display: flex;
+  justify-content: flex-end;
+  width: 300px;
+  margin-left: auto;
+}
+
+.user-panel-link {
+  display: block;
+  padding: 20px 16px;
+  text-decoration: none;
+  min-width: 20px;
+  min-height: 20px;
+}
+
+.counter {
+  font-size: 10px;
+  line-height: 10px;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+.navigation-button {
+  margin-top: 14px;
+  padding: 8px 34px;
+  margin-left: 20px;
+}
+
 .main-container {
   flex-grow: 1;
 }
 
 .welcome-container {
   margin: 0;
+  padding-top: 51px;
+  padding-bottom: 25px;
   background-color: #756157;;
   background: url("../images/welcome-sedona-background.jpg") no-repeat;
   background-size: 100% 428px;
@@ -99,6 +143,12 @@ body {
 .main-index-logo {
   display: block;
   margin: 0 auto;
+}
+
+.description-container {
+  width: 654px;
+  margin: 0 auto;
+  padding: 69px 0 90px 0;
 }
 
 .description-title {
@@ -128,6 +178,9 @@ body {
 
 .advantages-item {
   width: 400px;
+  min-height: 383px;
+  box-sizing: border-box;
+  padding-top: 103px;
   background: rgba(131, 179, 211, 0.12);
 }
 
@@ -145,7 +198,14 @@ body {
   background-color: #ffffff;
 }
 
+.text-container {
+  width: 230px;
+  margin: 0 auto;
+}
+
 .advantages-title {
+  margin: 0;
+  margin-bottom: 62px;
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
@@ -154,6 +214,7 @@ body {
 }
 
 .advantages-description {
+  margin: 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
@@ -165,7 +226,15 @@ body {
   font-weight: 700;
 }
 
+.index-search-container {
+  width: 592px;
+  margin: 0 auto;
+  padding: 96px 0;
+}
+
 .search-title {
+  margin: 0;
+  margin-bottom: 20px;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
@@ -173,12 +242,15 @@ body {
 }
 
 .search-description {
+  margin: 0;
+  margin-bottom: 54px;
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
 }
 
 .search-button {
+  padding: 8px 50px;
   font-size: 20px;
   line-height: 36px;
 }
@@ -194,7 +266,16 @@ body {
   background-size: 100% 415px;
 }
 
+.subscribe-text-container {
+  padding-top: 96px;
+  padding-bottom: 54px;
+  width: 485px;
+  margin: 0 auto;
+}
+
 .subscribe-title {
+  margin: 0;
+  margin-bottom: 20px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -202,6 +283,7 @@ body {
 }
 
 .subscribe-description {
+  margin: 0;
   font-size: 22px;
   line-height: 26px;
   font-weight: 400;
@@ -212,6 +294,7 @@ body {
   justify-content: center;
   width: 684px;
   margin: 0 auto;
+  padding-bottom: 104px;
 }
 
 .subscribe-field {
@@ -226,12 +309,15 @@ body {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
+  border-radius: 0 4px 4px 0;
   background-color: #82B3D3;
 }
 
-.page-footer-container {
+.page-footer {
   display: flex;
+  align-items: center;
   width: 1060px;
+  min-height: 120px;
   margin: 0 auto;
 }
 
@@ -280,6 +366,7 @@ body {
 }
 
 .inner-header-title {
+  margin: 0;
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
@@ -358,6 +445,7 @@ body {
   display: flex;
   width: 1060px;
   margin: 0 auto;
+  padding: 56px 0;
   color: #000000;
 }
 
@@ -459,8 +547,8 @@ body {
   display: flex;
   width: 400px;
   justify-content: space-between;
-  margin: 0 0 0 70px;
-  padding: 0;
+  margin: 0;
+  padding: 40px 70px 60px;
   list-style: none;
 }
 
